# Matterport3DSimulator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  Makefile.config.example  README.md  conda-specs.txt  docker-build.sh  docker-shell.sh  host-build.sh
cmake/Modules/: FindEGL.cmake  FindNumPy.cmake  FindOpenGL.cmake.3.10
connectivity/: 17DRP5sb8fy_connectivity.json  1LXtFkjw3qL_connectivity.json  1pXnuDYAj8r_connectivity.json  29hnd4uzFmX_connectivity.json  2azQ1b91cZZ_connectivity.json  2n8kARJN3HM_connectivity.json  2t7WUuJeko7_connectivity.json  5LpN3gDmAk7_connectivity.json  5ZKStnWn8Zo_connectivity.json  5q7pvUzZiYa_connectivity.json  759xd9YjKW5_connectivity.json  7y3sRwLe3Va_connectivity.json  8194nk5LbLH_connectivity.json  82sE5b5pLXE_connectivity.json  8WUmhLawc2A_connectivity.json  ARNzJeq3xxb_connectivity.json  B6ByNegPMKs_connectivity.json  D7G3Y4RVNrH_connectivity.json  D7N2EKCX4Sj_connectivity.json  E9uDoFAP3SH_connectivity.json  EDJbREhghzL_connectivity.json  EU6Fwq7SyZv_connectivity.json  GdvgFV5R1Z5_connectivity.json  HxpKQynjfin_connectivity.json  JF19kD82Mey_connectivity.json  JeFG25nYj2p_connectivity.json  JmbYfDe2QKZ_connectivity.json  PX4nDJXEHrG_connectivity.json  Pm6F8kyY3z2_connectivity.json  PuKPg4mmafe_connectivity.json  QUCTc6BB5sX_connectivity.json  README.md  RPmz2sHmrrY_connectivity.json  S9hNv5qa7GM_connectivity.json  SN83YJsR3w2_connectivity.json  TbHJrupSAjP_connectivity.json  ULsKaCPVFJR_connectivity.json  UwV83HsGsw3_connectivity.json  Uxmj2M2itWa_connectivity.json  V2XKFyX4ASd_connectivity.json  (+52 more)
include/: Benchmark.hpp  Catch.hpp  MatterSim.hpp  NavGraph.hpp  cbf.h
models/: ResNet-152-deploy.prototxt
scripts/: depth_to_skybox.py  downsize_skybox.py  fill_depth.py  precompute_img_features.py
src/driver/: driver.py  mattersim_main.cpp  random_agent.cpp
src/lib/: Benchmark.cpp  MatterSim.cpp  NavGraph.cpp  cbf.cpp  fragment.sh  vertex.sh
src/lib_python/: MatterSimPython.cpp
src/test/: main.cpp  python_test.py  python_vs_threejs_test.py  rendertest_spec.json
tasks/R2R/: README.md  agent.py  env.py  eval.py  model.py  plot.py  requirements.txt  train.py  utils.py
tasks/R2R/data/: download.sh
web/: .gitignore  README.md  gulpfile.js  package-lock.json  package.json
web/app/: collect-hit.html  eval-hit.html  index.html  sample_room_paths.json  trajectory.html  val_unseen_shortest_agent.json
web/app/js/: Matterport3D.js  PTZCameraControls.js  Trajectory.js
